# kompress

./: LICENSE  README.md  pyproject.toml  ruff.toml  tox.ini
.github/workflows/: main.yml
src/kompress/: __init__.py  _zippath.py  common.py  compat.py  tar.py  utils.py  zip.py
src/kompress/tests/: archive_path.py  kompress.py  tar.py  zip.py  zippath.py
