# see https://github.com/karlicoss/pymplate for up-to-date reference
[project]
dynamic = ["version"]  # version is managed by build backend
name = "kompress"
dependencies = [
    "typing_extensions",
]
requires-python = ">=3.10"

## these need to be set if you're planning to upload to pypi
description = "pathlib.Path adapters to transparently read data from compressed files and folders"
license = {file = "LICENSE"}
authors = [
    {name = "Dima Gerasimov (@karlicoss)", email = "karlicoss@gmail.com"},
]
maintainers = [
    {name = "Dima Gerasimov (@karlicoss)", email = "karlicoss@gmail.com"},
]

[project.urls]
Homepage = "https://github.com/karlicoss/kompress"
##


[project.optional-dependencies]
zstd = [
    # note: python 3.14+ has built-in compression.zstd module
    "zstandard; python_version < '3.14'",
]
lz4 = [
    "lz4"
]

[dependency-groups]
# TODO: not sure, on the one hand could just use 'standard' dev dependency group
# On the other hand, it's a bit annoying that it's always included by default? 
# To make sure it's not included, need to use `uv run --exact --no-default-groups ...`
testing = [
    "pytest",
    "ruff",
    "mypy",
    "lxml", # for mypy html coverage
    "ty>=0.0.1a19",

    "kompress[zstd,lz4]",
]


[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# unfortunately have to duplicate project name here atm, see https://github.com/pypa/hatch/issues/1894
[tool.hatch.build.targets.wheel]
packages = ["src/kompress"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "python-simplified-semver"
local_scheme = "dirty-tag"
